# SoManyWaysToInclude

./: .gitignore
FindableStatic_CMake/: README.md  build_n_run.sh  tmp_build.sh
FindableStatic_CMake/LibraryProject/: CMakeLists.txt
FindableStatic_CMake/LibraryProject/cmake/modules/: FindableLibrarySupport.cmake  SwiftInstallModuleSupport.cmake
FindableStatic_CMake/LibraryProject/lib_src/: CMakeLists.txt  Config.cmake.in
FindableStatic_CMake/MainProject/: CMakeLists.txt
FindableStatic_CMake/MainProject/hello_src/: CMakeLists.txt
FindableStatic_CMake/cmake/modules/: MYInstallDirs.cmake
FindableStatic_CMake/shared/cmake/modules/: MYInstallDirs.cmake
InstallStatic_CMake/LibraryProject/: CMakeLists.txt
InstallStatic_CMake/LibraryProject/cmake/modules/: SwiftInstallModuleSupport.cmake
InstallStatic_CMake/LibraryProject/lib_src/: CMakeLists.txt
InstallStatic_CMake/MainProject/: CMakeLists.txt
InstallStatic_CMake/MainProject/hello_src/: CMakeLists.txt
SingleBuild_CMake/: CMakeLists.txt  README.md  build_n_run.sh
SingleBuild_CMake/hello_src/: CMakeLists.txt  Hello.swift
SingleBuild_Package/: Package.swift  README.md
SingleBuild_Package/Sources/MyFancyResponseHandler/: Responder.swift
StaticFirst_CMake/: CMakeLists.txt  README.md  build_n_run.sh
StaticFirst_CMake/LibraryProject/: CMakeLists.txt
StaticFirst_CMake/LibraryProject/lib_src/: CMakeLists.txt
StaticFirst_CMake/MainProject/: CMakeLists.txt
StaticFirst_CMake/MainProject/hello_src/: main
StaticFirst_CMake/hello_src/: CMakeLists.txt
StaticFirst_SwiftC/: README.md  build_n_run.sh
